panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__pointers__test_error_arithmetic_with_incomplete_pointee.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/pointers/test_error_arithmetic_with_incomplete_pointee.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/pointers/test_error_arithmetic_with_incomplete_pointee.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration p~3 `ptr<struct T~2>` (cast `ptr<struct T~2>` nullptr))
         (declaration q~4 `ptr<struct T~2>` nullptr)
         (expression (add (name p~3 `ptr<struct T~2>`) 1))
         (expression (add 1 (name q~4 `ptr<struct T~2>`)))
         (expression (subtract (name p~3 `ptr<struct T~2>`) 1))
         (expression (subtract (name p~3 `ptr<struct T~2>`) (name q~4 `ptr<struct T~2>`)))
         (declaration vp~5 `ptr<void>` nullptr)
         (expression (add (name vp~5 `ptr<void>`) 1)))))

----- stderr -----
