panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__pointers__test_error_dereference_with_incomplete_pointee.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/pointers/test_error_dereference_with_incomplete_pointee.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/pointers/test_error_dereference_with_incomplete_pointee.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration p~3 `ptr<struct T~2>` nullptr)
         (expression (deref (name p~3 `ptr<struct T~2>`)))
         (expression (assign (deref (name p~3 `ptr<struct T~2>`)) 123)))))

----- stderr -----
